--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@
 
 .main-header {
     display: flex;
-    
+    justify-content: space-between;
+    align-items: center;
 }
 
 .main-logo {
@@ -16,4 +17,55 @@
     background-size: cover;
     background-position: center;
     border-radius: 50%;
+}
+
+/* Nav style */
+nav {
+    display: flex;
+    
+}
+
+nav a {
+    border: 1px solid;
+    color: black;
+    text-decoration: none;
+    padding: 8px;
+}
+
+section {
+    text-align: center;
+}
+
+.banner-form {
+    display: flex;
+    gap: 32px; 
+}
+
+.banner-img {
+    border: 1px solid;
+    height: 250px;
+    width: 100%;
+}
+
+.banner-form form {
+    border: 1px solid;
+    height: 250px;
+    width: 100%;
+}
+
+.sub-content {
+    height: 500px;
+    align-content: center;
+}
+
+footer {
+    text-align: center;
+}
+
+/* Responsive Design */
+@media only screen and (max-width: 480px) {
+    .banner-form {
+        flex-direction: column;
+    }
+
 }
